--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -15,7 +15,7 @@ jQuery.extend(XF.config, {
 			<xf:set var="$category" value="{$treeEntry.record}" />
 			<xf:optgroup label="{{ repeat('--', $treeEntry.depth) }} {$category.title}">
 				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warning">
-					<xf:option value="{$warning.warning_definition_id}" data-supports-custom-title="{$warningDefinition.sv_custom_title}">{{ repeat('--', $treeEntry.depth) }} {$warning.title}</xf:option>
+					<xf:option value="{$warning.warning_definition_id}">{{ repeat('--', $treeEntry.depth) }} {$warning.title}</xf:option>
 				</xf:foreach>
 			</xf:optgroup>
 		</xf:foreach>
@@ -25,8 +25,8 @@ jQuery.extend(XF.config, {
 		<xf:set var="$category" value="{$treeEntry.record}" />
 		<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
 			<xf:if is="$warningDefinition.sv_custom_title || $warningDefinition.warning_definition_id == 0">
-				<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="select">
-					<xf:textbox name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="" data-warning-label="{$warningDefinition.title}" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" data-depth-text="{{ repeat('--', $treeEntry.depth) }}" disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
+				<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="select" data-warning-label="{$warningDefinition.custom_title_placeholder}">
+					<xf:textbox name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
 				</xf:formrow>
 			</xf:if>
 		</xf:foreach>
@@ -66,11 +66,11 @@ jQuery.extend(XF.config, {
 				<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
 					<div class="u-depth{$treeEntry.depth}">
 						<xf:radio name="warning_definition_id" value="0">
-							<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}" data-warning-radio="true" data-warning-label="{$warningDefinition.title}" data-xf-init="warning-title-watcher">
+							<xf:option value="{$warningDefinition.warning_definition_id}" class="js-FormFiller" label="{$warningDefinition.title}" data-warning-radio="true" data-warning-label="{$warningDefinition.custom_title_placeholder}" data-xf-init="warning-title-watcher">
 								<xf:dependent>
 									<xf:if is="$warningDefinition.sv_custom_title || $warningDefinition.warning_definition_id == 0">
 										<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="radio">
-											<xf:textbox label="" name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="{$warningDefinition.title}" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" />
+											<xf:textbox label="" name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="{$warningDefinition.custom_title_placeholder}" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" />
 										</xf:formrow>
 									</xf:if>
 								</xf:dependent>
