--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_escalating_defaults.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_escalating_defaults.html
@@ -18,7 +18,8 @@
 						
 						<xf:datarow>
 							<xf:main href="{{ link('warnings/default/edit', null, { 'warning_default_id': $escalatingDefault.warning_default_id }) }}">
-								<xf:label>{{ phrase('sv_increase_default_expiry_by_x', {'length': $expiry_extension_phrase}) }}</xf:label>
+								<xf:label>{{ phrase('points') }}: {$escalatingDefault.threshold_points}</xf:label>
+								<xf:hint>{{ phrase('sv_increase_default_expiry_by_x', {'length': $expiry_extension_phrase}) }}</xf:hint>
 							</xf:main>
 							<xf:toggle name="active[{$escalatingDefault.warning_default_id}]" selected="$escalatingDefault.active"
 									   class="dataList-cell--separated" submit="true"
