Make phrase warning_alert_text compatible with customized phrases

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
@@ -5,8 +5,8 @@
 </xf:if>
 
 {{ phrase('warning_alert_text', {
-		'username': username_link($issuer, false, {'defaultname': $issuer.username}),
-		'warningLinkAttributes': 'href="' . link('warnings', $content) . '" class="fauxBlockLink-blockLink"',
+		'name': username_link($issuer, false, {'defaultname': $issuer.username}),
+		'warning_attributes': 'href="' . link('warnings', $content) . '" class="fauxBlockLink-blockLink"',
 		'points': {$content.points},
 		'warning_title': {$content.title}
 	})
