Don't make entire row clickable for warning actions listing

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warning_actions.html
@@ -23,7 +23,7 @@
 								{{ phrase('n_a') }}
 							</xf:if>
 						</xf:cell>
-						<xf:cell href="{{ link('warning-actions', $warningAction) }}" overlay="true">{{ phrase('view') }}</xf:cell>
+						<xf:cell class="dataList-cell--link"><a href="{{ link('warning-actions', $warningAction) }}" data-xf-click="overlay">{{ phrase('view') }}</a></xf:cell>
 					</xf:datarow>
 				</xf:foreach>
 			</xf:datalist>
