--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
@@ -20,7 +20,7 @@
 			</xf:formrow>
 		</div>
 		
-		<xf:if is="$warningAction.canEditWarningActions()">
+		<xf:if is="$warningAction.canEdit()">
 			<h2 class="block-tabHeader tabs" data-xf-init="tabs" role="tablist">
 				<a class="tabs-tab is-active" role="tab" tabindex="0" aria-controls="{{ unique_id('warning-action') }}">{{ phrase('sv_update_warning_action') }}</a>
 			</h2>
