--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -25,7 +25,7 @@ jQuery.extend(XF.config, {
 		<xf:set var="$category" value="{$treeEntry.record}" />
 		<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
 			<xf:if is="$warningDefinition.sv_custom_title || $warningDefinition.warning_definition_id == 0">
-				<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="select" data-warning-label="{$warningDefinition.custom_title_placeholder}">
+				<xf:formrow label="" data-custom-title-container="1" data-warning-view-type="select" data-warning-label="{$warningDefinition.custom_title_placeholder}" data-for-warning="{$warningDefinition.warning_definition_id}">
 					<xf:textbox name="custom_title" maxlength="{{ max_length($warningDefinition, 'title') }}" value="" data-xf-init="warning-title-watcher" data-warning-title-input="1" data-for-warning="{$warningDefinition.warning_definition_id}" disabled="disabled" placeholder="{{ phrase('custom_title') }}" />
 				</xf:formrow>
 			</xf:if>
