--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warning_actions_info.html
@@ -12,8 +12,10 @@
 			</xf:formrow>
 			
 			<xf:formrow label="{{ phrase('sv_warning_action_expiry') }}">
-				<xf:if is="{$warningAction.expiry_date_rounded}">
-					<xf:date time="{$warningAction.expiry_date_rounded}" />
+				<xf:if is="{$warningAction.is_permanent}">
+					{{ phrase('permanent') }}
+				<xf:elseif is="{$warningAction.expiry_date_rounded}" />
+					<xf:date time="{$warningAction.is_permanent}" />
 				<xf:else />
 					{{ phrase('n_a') }}
 				</xf:if>
