--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_warn7.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_warn7.html
@@ -2,7 +2,7 @@
 
 <h2 class="block-formSectionHeader">
 	<span class="collapseTrigger collapseTrigger--block" data-xf-click="toggle" data-target="< :up :next">
-		<span class="block-formSectionHeader-aligner">{{ phrase('sv_warning_improvements_previous_warnings') }}</span>
+		<span class="block-formSectionHeader-aligner">{{ phrase('sv_warning_improvements_previous_warnings', {'count': $user.warning_count}) }}</span>
 	</span>
 </h2>
 
@@ -18,9 +18,9 @@
 			<xf:foreach loop="$previousWarnings" value="$previousWarning">
 				<xf:datarow rowclass="{{ $previousWarning.is_expired ? 'dataList-row--disabled' : '' }}">
 					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true">{$previousWarning.title}</xf:cell>
-					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true"><xf:date time="{$previousWarning.warning_date} " /></xf:cell>
-					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true">{$previousWarning.points|number}</xf:cell>
-					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true">
+					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true" class="dataList-cell--min"><xf:date time="{$previousWarning.warning_date} " /></xf:cell>
+					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true" class="dataList-cell--min">{$previousWarning.points|number}</xf:cell>
+					<xf:cell href="{{ link('warnings', $previousWarning) }}" overlay="true" class="dataList-cell--min">
 						<xf:if is="$previousWarning.expiry_date">
 							<xf:date time="{$previousWarning.expiry_date} " />
 							<xf:else />
@@ -29,6 +29,11 @@
 					</xf:cell>
 				</xf:datarow>
 			</xf:foreach>
+			<xf:if is="count($previousWarnings) < $user.warning_count">
+				<xf:datarow rowclass="{{ $previousWarning.is_expired ? 'dataList-row--disabled' : '' }}">
+					<xf:cell href="{{ link('members', $user) }}#warnings" colspan="4">{{ phrase('sv_all_warnings', {'count': $user.warning_count - count($previousWarnings) }) }}</xf:cell>
+				</xf:datarow>
+			</xf:if>
 		</xf:datalist>
 	</xf:formrow>
 </div>
