Do not allow original category 1 to be deleted

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_edit.html
@@ -4,7 +4,7 @@
 	<xf:title>{{ phrase('edit_category:') }} {$category.title}</xf:title>
 </xf:if>
 
-<xf:pageaction if="$category.warning_category_id">
+<xf:pageaction if="$category.warning_category_id > 1">
 	<xf:button href="{{ link('warnings/category-delete', null, { 'warning_category_id': $category.warning_category_id }) }}"
 		icon="delete"
 		data-xf-click="overlay" />
