Only make link clickable if the warning is viewable

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
@@ -6,7 +6,7 @@
 
 {{ phrase('warning_alert_text', {
 		'name': username_link($issuer, false, {'defaultname': $issuer.username}),
-		'warning_attributes': 'href="' . link('warnings', $content) . '" class="fauxBlockLink-blockLink"',
+		'warning_attributes': $content.canView() ? 'href="' . link('warnings', $content) . '" class="fauxBlockLink-blockLink"' : '',
 		'points': {$content.points},
 		'warning_title': {$content.title}
 	})
