--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
@@ -1,6 +1,6 @@
 <xf:macro name="sortable_form" arg-categoryTree="!" arg-warnings="!">
 	<xf:css src="sv_warning_improvements_nestable.less" />
-	
+
 	<xf:macro template="public:nestable_macros" name="setup" />
 
 	<xf:form action="{{ link('warnings/sort') }}" class="block" ajax="true">
@@ -30,7 +30,7 @@
 			<xf:contentcheck>
 			<xf:foreach loop="$warnings" value="$warning">
 				<li class="nestable-item" data-id="{$warning.warning_definition_id}">
-					<div class="nestable-handle" aria-label="{{ phrase('drag_handle') }}"><i class="fa fa-bars" aria-hidden="true"></i></div>
+					<div class="nestable-handle" aria-label="{{ phrase('drag_handle')|for_attr }}"><i class="fa fa-bars" aria-hidden="true"></i></div>
 					<div class="nestable-content">{$warning.MasterTitle.phrase_text}</div>
 				</li>
 			</xf:foreach>
@@ -45,7 +45,7 @@
 	<li class="category-item" data-id="{$child.id}">
 		<div class="category-content block-minorHeader">{$child.record.title}</div>
 		<xf:macro name="sortable_warning_list" arg-warnings="{$warnings.{$child.id}}" arg-category="{$child.record}" />
-		
+
 		<xf:if is="$child.children is not empty">
 			<xf:macro name="sortable_list" arg-children="{$child.children}" arg-warnings="{$warnings}" />
 		</xf:if>
