Fix duplicate : in phrase

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_member_warn_chooser.html
@@ -54,7 +54,7 @@ jQuery.extend(XF.config, {
 				<xf:if is="(!{$warnings.{$category.Parent.warning_category_id}} && {$category.Parent.depth} === 0) || (!{$warnings.{$category.Parent.warning_category_id}} && {$category.Parent.depth} !== 0)">
 					<xf:set var="$categoryTitleForRadio"></xf:set>
 				<xf:else />
-					<xf:set var="$categoryTitleForRadio">{$category.title}:</xf:set>
+					<xf:set var="$categoryTitleForRadio">{$category.title}</xf:set>
 				</xf:if>
 			<xf:else />
 				<xf:set var="$categoryTitleForRadio"></xf:set>
