--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
@@ -19,5 +19,5 @@
 	</xf:foreach>
 </xf:selectrow>
 
-<xf:numberboxrow name="sv_post_thread_id" value="{$action.sv_post_thread_id}" label="{{ phrase('sv_warning_thread_id') }}:" explain="{{ phrase('sv_warning_action_post_thread_reply') }}" />
-<xf:numberboxrow name="sv_post_as_user_id" value="{$action.sv_post_as_user_id}" label="{{ phrase('sv_warning_post_as_user_id') }}:" explain="{{ phrase('sv_warning_action_post_as_user') }}" />
+<xf:numberboxrow name="sv_post_thread_id" value="{$action.sv_post_thread_id}" label="{{ phrase('sv_warning_thread_id:') }}" explain="{{ phrase('sv_warning_action_post_thread_reply') }}" />
+<xf:numberboxrow name="sv_post_as_user_id" value="{$action.sv_post_as_user_id}" label="{{ phrase('sv_warning_post_as_user_id:') }}" explain="{{ phrase('sv_warning_action_post_as_user') }}" />
