--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_warn7.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_warn7.html
@@ -12,7 +12,7 @@
 			<xf:datarow rowtype="header">
 				<xf:cell>{{ phrase('warning') }}</xf:cell>
 				<xf:cell>{{ phrase('date') }}</xf:cell>
-				<xf:cell>{{ phrase('points') }}</xf:cell>
+				<xf:cell>{{ phrase('svWarningPoints') }}</xf:cell>
 				<xf:cell>{{ phrase('expiry') }}</xf:cell>
 			</xf:datarow>
 			<xf:foreach loop="$previousWarnings" value="$previousWarning">
