If a user can't view warning actions, do not trigger checking the warning action count

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_view_warning_actions.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/sv_warningimprovements_member_view_warning_actions.html
@@ -1,4 +1,4 @@
-<xf:if is="{$user.warning_actions_count}">
+<xf:if is="$user.canViewWarningActions() && $user.warning_actions_count">
 	<li data-href="{{ link('members/warning-actions', $user) }}" role="tabpanel" aria-labelledby="warningActions">
 		<div class="blockMessage">{{ phrase('loading...') }}</div>
 	</li>
