--- a/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/public/alert_warning_alert_warning.html
@@ -8,6 +8,6 @@
 		'name': username_link($issuer, false, {'defaultname': $issuer.username}),
 		'warning_attributes': $content.canView() ? 'href="' . link('warnings', $content) . '" class="fauxBlockLink-blockLink"' : '',
 		'points': {$content.points},
-		'warning_title': {$content.title}
+		'warning_title': is_addon_active('SV/WarningImprovements', 2050100) ? $content.title_censored : $content.title
 	})
 }}
